--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,202 @@
-body {
+/* Reset */
+*,
+*::before,
+*::after {
+  box-sizing: border-box;
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+
+img,
+picture {
+  max-width: 100%;
+  display: block;
 }
+
+
+input,
+button,
+textarea,
+select {
+  font: inherit;
+}
+
+/* Global */
+@import url('https://fonts.googleapis.com/css2?family=Manrope:wght@200;300;400;500;600;700;800&family=Playfair+Display:ital,wght@0,400;0,500;0,600;0,700;0,800;0,900;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
+
+h1, h2, h3, h4, h5, h6 {
+  font-family: 'Playfair Display', serif;
+  font-weight: 700;
+  color: #3e4e57
+}
+
+body {
+  font-family: 'Manrope', sans-serif;
+  color: #3e4e57
+}
+
+/* Header */
+nav img {
+  width: 200px;
+  height: auto;
+}
+
+nav {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding: 20px;
+  background: transparent;
+  position: absolute;
+  width: 100%;
+}
+
+nav p {
+  font-style: italic;
+  color: #5f666e;
+  font-size: 14px;
+}
+
+#nav-container {
+  display: flex;
+  align-items: center;
+}
+
+#navlink {
+  margin-right: 60px;
+  font-family: 'Manrope', sans-serif;
+}
+
+
+/* Home */
+#banner {
+  background-image: url('./assests/background.jpg');
+  height: 100vh;
+  background-position: center; 
+  background-repeat: no-repeat; 
+  background-size: cover; 
+  display: flex;
+  justify-content: space-between;
+  align-items: flex-start;
+  padding-top: 150px;
+}
+
+#header {
+  margin-left: 50px;
+  margin-bottom: 60px;
+}
+
+#header h1 {
+  font-size: 90px;
+  line-height: 85px;
+}
+
+#header p {
+  margin-top: 40px;
+  font-size: 23px;
+}
+
+#header button {
+  background-color: transparent;
+  border: 2px solid #4d626d;
+  color: #4d626d;
+  border-radius: 40px;
+  padding: 10px 30px;
+  font-weight: 700;
+  margin-top: 40px;
+}
+
+#header button:hover {
+  background-color: #4d626d;
+  border: 2px solid #4d626d;
+  color: #eaeaef;
+}
+
+#header button:active {
+  background-color: #9499a4;
+  border: 2px solid #9499a4;
+  color: #eaeaef;
+}
+
+.sort-button {
+  width: 150px;
+  height: 150px;
+  background: rgba( 255, 255, 255, 0.2 );
+  box-shadow: 0 8px 32px 0 rgba( 31, 38, 135, 0.37 );
+  backdrop-filter: blur( 10px );
+  -webkit-backdrop-filter: blur( 10px );
+  border-radius: 10px;
+  display: flex;
+  flex-flow: column;
+  justify-content: center;
+  align-content: center;
+  flex-direction: column;
+  margin-right: 50px;
+  cursor: pointer;
+}
+
+.sort-button:last-child {
+  margin-top: 20px;
+}
+
+.sort-button:hover {
+  background: #3e4e57;
+  color: #eaeaef;
+}
+
+.sort-button:active {
+  background: #5f666e;
+}
+
+.sort-button p {
+  text-align: center;
+  font-weight: 800;
+}
+
+#itinerary-list {
+  background-color: #eaeaef;
+  padding: 10%;
+}
+
+/* Individual Itinerary Blocks */
+.itinerary-container {
+  background-color: #f7f7f9;
+  box-shadow: 20px 20px 20px rgba(0, 0, 0, 0.2);
+  border-radius: 50px;
+}
+
+.itinerary-container:not(:first-child) {
+  margin-top: 10%;
+}
+
+.header {
+  display: flex;
+  justify-content: space-between;
+  padding: 20px 50px;
+  background-color: #4d626d;
+  border-radius: 50px 50px 0 0;
+}
+
+.header h3 {
+  color: #eaeaef;
+}
+
+.detail-container {
+  display: flex;
+  justify-content: space-around;
+  margin: 20px;
+}
+
+.detail {
+  flex-basis: 25%;
+}
+
+.detail h4 {
+  text-align: center;
+  margin-bottom: 10px;
+}
+
+.weather {
+  text-align: center;
+}
+
