--- a/src/index.css
+++ b/src/index.css
@@ -198,10 +198,38 @@ nav p {
 .detail h4 {
   text-align: center;
   margin-bottom: 10px;
+  font-family: "Manrope", sans-serif;
+  font-weight: 600;
+  text-decoration: underline;
+}
+
+ul {
+  list-style: none;
+  padding-left:0;
+}
+
+ul li {
+  display: flex;
+  justify-content: space-between;
+  font-size: 14px;
+}
+
+.card-label {
+  font-weight: 700;
+}
+
+.card-subheader {
+  text-align: center;
+  background-color: #9499a4;
+  color: #eaeaef;
+  text-transform: uppercase;
+  font-size: 14px;
+  font-weight: 700;
 }
 
 .weather {
   text-align: center;
+  font-style: italic;
 }
 
 /* Add Form */
